# TaskMesh

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260420_01_initial_schema.py
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: audit.py  health.py  tasks.py
app/core/: config.py
app/db/: models.py  session.py
app/queue/: producer.py  redis_client.py  stream.py
app/reliability/: __init__.py  circuit_breaker.py  exceptions.py
app/schemas/: tasks.py
app/services/: task_service.py
app/workers/: engine.py  handlers.py  main.py
tests/: conftest.py  test_phase3_api.py  test_phase3_worker_reliability.py  test_task_api.py  test_worker_idempotency.py
